--- a/JBF_IM/app/src/main/AndroidManifest.xml
+++ b/JBF_IM/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,6 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.JBF_IM"
+        android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
         <activity
             android:name=".activity.MainActivity"
@@ -19,7 +22,7 @@
             android:name=".activity.SplashActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Design.NoActionBar">
+            android:theme="@style/Theme.JBF_IM">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
